
syntax = "proto3";

option go_package = "github.com/beesaferoot/gprc-lnd;lnd";

service LND {

    rpc SpawnNodes(stream NodeDetail) returns (NodeList) {}
    rpc GetNodesListByStatus(Status) returns (NodeList) {}
    rpc DestroyNode(NodeId) returns (NodeDetail) {}
}


message NodeDetail {
    int32 id = 1;
    string Nodename = 2;
    string IP = 3;
    UUID UserId = 4;
    Date CreateAt = 5; 
    Status.Value status = 6;
}

message Status {
    enum Value {
        FAILED = 0;
        RUNNING = 1;
    }
    Value value = 1;
}

message NodeList {
    repeated NodeDetail nodes = 1;
}


message NodeId {
    int32 value = 1;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message UUID {
    string value = 1;
}